fix(component): fixes AK-1813 ie11 / safari / firefox missalignments
affects: @atlaskit/inline-edit

--- a/packages/inline-edit/src/styles.less
+++ b/packages/inline-edit/src/styles.less
@@ -3,23 +3,23 @@
 @import '~akutil-shared-styles/src/z-indexes.less';
 
 .root {
-  margin-left: -@ak-grid-size;
   display: flex;
   flex-direction: column;
+  margin-left: -@ak-grid-size;
 }
 
 .read-view-wrapper {
-  max-width: 100%;
   display: inline-flex;
   flex: 0 1 auto;
+  max-width: 100%;
 }
 
 .content-wrapper {
-  position: relative;
+  align-items: flex-end;
   display: inline-flex;
   flex-direction: column;
-  align-items: flex-end;
   max-width: 100%;
+  position: relative;
 }
 
 .field-base-wrapper {
@@ -33,14 +33,10 @@
 }
 
 .spinner-wrapper {
+  align-items: flex-end;
+  display: inline-flex;
   margin-left: unit(@ak-grid-size / 2, px);
   margin-top: unit(@ak-grid-size / 2, px);
-  display: inline-flex;
-  align-items: flex-end;
-  // TODO: Remove this when updated to specs version 1.1
-  // field-base should stay the same width so we need to provide a
-  // min-width to cover action buttons width.
-  // min-width: unit(@ak-grid-size / 2*3 + 32 + 32, px);
 }
 
 .read-view-content-wrapper {
@@ -50,18 +46,19 @@
 
 .buttons-wrapper {
   display: flex;
-  position: absolute;
-  top: 100%;
-  margin-top: unit(@ak-grid-size / 2, px);
   flex-shrink: 0;
+  margin-top: unit(@ak-grid-size / 2, px);
+  position: absolute;
+  right: 0;
+  top: 100%;
 
   .button-wrapper {
-    z-index: 200;
-    box-sizing: border-box;
-    border-radius: unit(@ak-grid-size / 2 - 1, px);
     background-color: @ak-color-N0;
+    border-radius: unit(@ak-grid-size / 2 - 1, px);
     box-shadow: 0 unit(@ak-grid-size / 2, px) @ak-grid-size unit(-(@ak-grid-size / 4), px) fade(@ak-color-N900, 28%),
                 0 0 1px fade(@ak-color-N900, 30%);
+    box-sizing: border-box;
+    z-index: 200;
   }
 
   .button-wrapper:last-child {
@@ -84,8 +81,8 @@
 // the vendor prefixes here are deliberate. 'appearance' does not seem to get picked up by postcss,
 // eslint or even Chrome for some reason. :/
 .edit-button {
-  -webkit-appearance: none;
   -moz-appearance: none;
+  -webkit-appearance: none;
   appearance: none;
   background: transparent;
   border: 0;
